fix pre overflow

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+pre {
+    overflow: hidden;
+}
+
 body {
     font-family: monospace;
     font-size: larger;
